refact: swagger ui file, sale and purchase routes
